fix layout : update header z-index, to show upper than float sidebar

--- a/snussum/snussum/static/sass/partials/_header.scss
+++ b/snussum/snussum/static/sass/partials/_header.scss
@@ -1,4 +1,6 @@
 header#header {
+  z-index: 1001;
+
   background-color: $snussum-darkgrey;
   color: white;
 
